--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,20 +1,43 @@
-body{
-    background-color: rgb(255, 255, 255);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-
+body {
+  background-color: rgb(255, 255, 255);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 :root {
-    --main-col: #121923;
-    --text-col: #fff;
-    --accent-col: #ff6600;
-    --img-shadow: rgba(0, 0, 0, 0.7);
-    --cta-col: rgba(255, 255, 255, 0.05);
-    --cta-img-col: rgba(255, 255, 255, 0.3);
-    --cta-shadow: rgba(0, 0, 0, 0.35);
-    --banners-col: rgba(255, 255, 255, 0.05);
-    --cta-header-col: rgba(184, 107, 35, 0.35);
-  }
+  --main-col: #121923;
+  --text-col: #fff;
+  --accent-col: #ff6600;
+  --img-shadow: rgba(0, 0, 0, 0.7);
+  --cta-col: rgba(255, 255, 255, 0.05);
+  --cta-img-col: rgba(255, 255, 255, 0.3);
+  --cta-shadow: rgba(0, 0, 0, 0.35);
+  --banners-col: rgba(255, 255, 255, 0.05);
+  --cta-header-col: rgba(184, 107, 35, 0.35);
+}
 
+.mainevent {
+  display: flex;
+  align-items: center;
+}
+.entermain {
+  flex: 1;
+}
 
+.imgmain {
+  flex: 2;
+}
+.imgmain img {
+  display: block;
+}
 
+.image-container {
+  max-width: 900px;
+  max-height: 300px;
+  overflow: hidden;
+}
+
+.image-container img {
+  width: 100%;
+  height: auto;
+  object-fit: fill;
+}
