--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,9 +2,6 @@ body {
   background-color: rgb(255, 255, 255);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-h1 {
-  color: var(--accent-col);
-}
 
 :root {
   --main-col: #31738b;
@@ -18,6 +15,12 @@ h1 {
   --cta-header-col: rgba(184, 107, 35, 0.35);
 }
 
+/*Text colours */
+h1 {
+  color: var(--accent-col);
+}
+
+/* Main Exhibition codes and work in progress */
 .mainevent {
   display: flex;
   background-color: var(--main-col);
@@ -37,5 +40,32 @@ h1 {
 .event-img img {
   width: 100%;
   max-height: 300px;
-  overflow: hidden;
+  overflow: hidden; /* need to figure out scaling and cropping */
+}
+
+/* Collection links with images */
+.collection {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+}
+
+.collection-imgs {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.collection-imgs img {
+  max-width: 350px;
+  margin: 3%;
+}
+.collection-tags {
+  flex: 2;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: 10px;
 }
