--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -54,17 +54,22 @@ h1 {
 .enterexhibition {
   width: 100%;
   flex: 1;
-
   background-color: var(--exhibit-bar-col);
   text-align: center;
 }
 
 .exhibition-img {
   flex: 1;
+  height: 300px;
+  overflow: hidden;
+  position: relative;
 }
 
 .exhibition-img img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 100% 50%;
 
   /* need to figure out scaling and cropping */
 }
