--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -60,12 +60,15 @@ h1 {
 
 .exhibition-img {
   flex: 1;
-  height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-height: 300px;
   overflow: hidden;
-  position: relative;
+  width: 100%;
 }
 
-.exhibition-img img {
+.aexhibition-img img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -73,6 +76,11 @@ h1 {
 
   /* need to figure out scaling and cropping */
 }
+.cropped-image {
+  width: 100%;
+  height: auto;
+}
+
 /* Collection links with images */
 .collection {
   display: flex;
