--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -44,6 +44,20 @@ h1 {
   overflow: hidden; /* need to figure out scaling and cropping */
 }
 
+/*cover museum shaping */
+.cover {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+}
+
+.cropped-image {
+  width: 100%;
+  max-height: 400px;
+  object-fit: cover;
+}
+
 /*Exhibition listed on exhibit page*/
 .exhibition {
   display: flex;
@@ -68,14 +82,6 @@ h1 {
   width: 100%;
 }
 
-.aexhibition-img img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: 100% 50%;
-
-  /* need to figure out scaling and cropping */
-}
 .cropped-image {
   width: 100%;
   height: auto;
