--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,6 +27,8 @@ h1 {
   background-color: var(--main-col);
   max-height: 300px;
   align-items: center;
+  justify-content: flex-end;
+  overflow: hidden;
 }
 
 .entermain {
@@ -36,9 +38,20 @@ h1 {
 
 .event-img {
   flex: 2;
+  display: flex;
+  align-items: center;
+  max-height: 300px;
+  width: 100%;
+  overflow: hidden;
+}
+.event-cropped-img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  object-position: 30% 50%;
 }
 
-.event-img img {
+.aevent-img img {
   width: 100%;
   max-height: 300px;
   overflow: hidden; /* need to figure out scaling and cropping */
