--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -66,66 +66,32 @@ h2 {
 }
 
 /* Collection links with images */
-.collection {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-row: repeat(2, 1fr);
+  gap: 10px;
   text-align: center;
+  margin-bottom: 20px;
 }
 
-.collection-imgs {
-  display: flex;
-
-  justify-content: center;
-  gap: 20px;
-  max-height: 250px;
-  overflow: hidden;
-}
-.image-container {
-  position: relative;
-  width: 100%;
-}
-.collection-imgs img {
-  max-width: 100%;
-  max-height: 100%;
+.img {
+  max-height: 300px;
   aspect-ratio: 1/1;
-  object-fit: cover;
-  border-radius: 2%;
+  place-self: center;
+  border-radius: 3%;
 }
-.collection-imgs a {
-  width: 100%;
-  text-align: center;
-  display: block;
 
+.grid-container a {
+  color: var(--accent-col);
   background-color: var(--main-col);
-  padding: 5px 10px;
-  border-radius: 2%;
-}
-/*Break up into divs or add classes directly to a's to not have continuosly line*/
-.apositionVR {
-  object-position: 75% 0%;
-}
-.apositionheart {
-  object-position: 25% 0%;
-}
-.apositioncosmo {
-  object-position: 30% 0%;
-}
-.apositionmammoth {
-  object-position: 0%;
+  padding: 10px;
+  border: 1px solid var(--accent-col);
+  text-decoration: none;
+  display: block;
+  width: 100%;
 }
 
-.collection-tags {
-  display: flex;
-  justify-content: center;
-  gap: 150px;
-}
-.image-container a {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-}
 /*Young stars club */
 .club {
   display: flex;
