--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -106,13 +106,35 @@ h2 {
 /*Young stars club */
 .club {
   display: flex;
+  justify-content: space-around;
+  margin: 3%;
+  flex-wrap: wrap;
 }
-.club-img {
+
+.club-box {
   flex: 1;
+  min-width: 45%;
+  max-width: 45%;
+  margin: 1%;
+  overflow: hidden;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
+
+.club-box img {
+  max-width: 100%;
+  height: auto;
+}
+
 .club-enter {
   flex: 1;
   background-color: var(--main-col);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /*Exhibition listed on exhibit page*/
