--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -64,12 +64,17 @@ h2 {
   object-fit: cover;
   object-position: 30% 50%;
 }
+/*page containers*/
+.page-container {
+  margin: 3%;
+}
 /*Border for information text*/
 
 .info-box {
   border: 3px solid black;
   padding: 2%;
-  margin: 3%;
+  margin-top: 50px;
+  margin-bottom: 50px;
   font-size: 1.5em;
 }
 .info-box h3 {
@@ -83,31 +88,28 @@ h2 {
   grid-row: repeat(2, 1fr);
   gap: 10px;
   text-align: center;
+  justify-content: space-between;
   margin-bottom: 20px;
 }
-
 .img {
-  max-height: 300px;
-  aspect-ratio: 1/1;
-  place-self: center;
-  border-radius: 3%;
+  width: 100%;
+  position: relative;
 }
 
 .grid-container a {
   color: var(--accent-col);
   background-color: var(--main-col);
   padding: 10px;
-  border: 1px solid var(--accent-col);
   text-decoration: none;
   display: block;
-  width: 100%;
+  font-size: 2em;
+  font-weight: 500;
 }
 
 /*Young stars club */
 .club {
   display: flex;
-  justify-content: space-around;
-  margin: 3%;
+  justify-content: space-between;
   flex-wrap: wrap;
 }
 
@@ -115,9 +117,7 @@ h2 {
   flex: 1;
   min-width: 45%;
   max-width: 45%;
-  margin: 1%;
   overflow: hidden;
-
   display: flex;
   justify-content: center;
   align-items: center;
