--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -1,5 +1,28 @@
 @media (max-width: 700px) {
+  .desktop-nav {
+    display: none;
+  }
+  .mobile-nav {
+    display: block;
+    text-align: center;
+    background-color: var(--accent-col);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 70px;
+    z-index: 1000;
+  }
+
+  .mobile-nav .logo img {
+    height: 50px;
+    width: auto;
+    position: fixed;
+    left: 5%;
+  }
+
   .cover {
+    margin-top: 70px;
     max-height: 150px;
     justify-content: center;
   }
