--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -211,3 +211,14 @@ h2 {
   background-color: var(--exhibition-col);
   text-align: center;
 }
+/*map and location*/
+.map-img {
+  display: flex;
+
+  width: 100%;
+}
+.map-img img {
+  width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+}
