--- a/assets/css/buttons.css
+++ b/assets/css/buttons.css
@@ -1,8 +1,9 @@
 .button {
   color: white;
   text-align: center;
+  text-decoration: none;
   text-shadow: -3px 5px 10px rgba(255, 255, 255, 0.5);
-  padding: 2px 20px;
+  padding: 10px 20px;
   font-size: 1.5em;
   font-weight: bold;
   background-color: #31738b;
