--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -72,4 +72,27 @@
     flex: auto;
     width: 100%;
   }
+  .form-position {
+    position: absolute;
+    top: 100px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .form-container {
+    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(9, auto);
+    grid-template-areas:
+      "img1" "img2" "img3" "img4"
+      "link1" "link2" "link3" "link4"
+      "link5";
+    gap: 10px;
+    text-align: center;
+    justify-content: space-between;
+    margin: 30px;
+  }
+  .link5 {
+    grid-column: 1 / span 2;
+  }
 }
