--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -20,6 +20,10 @@ h1,
 h2 {
   color: var(--accent-col);
 }
+h1 a {
+  text-decoration: none;
+  color: var(--accent-col);
+}
 /*header*/
 .desktop-nav {
   display: block;
