--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -13,8 +13,7 @@ nav {
 .logo img {
   width: 100%;
   height: auto;
-  max-width: 900px;
-  display: block;
+
   margin: 0 auto;
 }
 
@@ -45,11 +44,10 @@ nav {
 }
 
 .search-input {
-  width: 40%;
   max-width: 250px;
-  height: auto;
+
   margin-right: 20px;
-  padding: 2%;
+  padding: 5px;
   border: 1px solid #000000;
   border-radius: 7px;
 
@@ -59,4 +57,11 @@ nav {
 .search-input::placeholder {
   color: #999;
   opacity: 0.7;
+}
+/*header media query*/
+.desktop-nav {
+  display: block;
+}
+.mobile-nav {
+  display: none;
 }
