--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -13,7 +13,9 @@
     height: 70px;
     z-index: 1000;
   }
-
+  main {
+    margin-top: 70px;
+  }
   .mobile-nav .logo img {
     height: 50px;
     width: auto;
@@ -72,12 +74,7 @@
     flex: auto;
     width: 100%;
   }
-  .form-position {
-    position: absolute;
-    top: 100px;
-    left: 50%;
-    transform: translateX(-50%);
-  }
+  /*form*/
   .form-container {
     align-items: center;
     display: grid;
@@ -87,10 +84,6 @@
       "img1" "img2" "img3" "img4"
       "link1" "link2" "link3" "link4"
       "link5";
-    gap: 10px;
-    text-align: center;
-    justify-content: space-between;
-    margin: 30px;
   }
   .link5 {
     grid-column: 1 / span 2;
