--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -92,7 +92,7 @@ h1 a {
 }
 .info-box h3 {
   text-align: center;
-  margin-bottom: 20px;
+  margin: 20px;
 }
 .box-paragraph {
   display: flex;
@@ -109,34 +109,36 @@ h1 a {
 }
 
 /*form*/
-.form-position {
-  align-items: center;
-  justify-content: center;
+.form-box {
+  border: 3px solid black;
 }
 .form-container {
-  align-items: center;
+  height: 100%;
+  width: 100%;
   display: grid;
+  gap: 20px;
+  padding: 30px;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(3, auto);
   grid-template-areas:
     "img1 img2 img3 img4"
     "link1 link2 link3 link4"
     ". link5 link5 .";
-  gap: 10px;
   text-align: center;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-bottom: 20px;
 }
 .link5 {
   grid-column: 2 / span 2;
 }
+
 .ticket-option {
   cursor: pointer;
   color: rgb(255, 255, 255);
   text-align: center;
   text-decoration: none;
   padding: 10px 20px;
-  font-size: 0.5em;
+  font-size: 0.7em;
   border-radius: 20px;
   font-weight: bold;
   background-color: #31738b;
@@ -157,6 +159,9 @@ h1 a {
   border-radius: 20px;
 }
 .checkout-button:hover {
+  background-color: var(--checked-col);
+}
+.ticket-option:hover {
   background-color: var(--checked-col);
 }
 
