--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -1,4 +1,7 @@
 @media (max-width: 700px) {
+  main {
+    margin-top: 70px;
+  }
   .desktop-nav {
     display: none;
   }
@@ -13,12 +16,10 @@
     height: 70px;
     z-index: 1000;
   }
-  main {
-    margin-top: 70px;
-  }
+
   .mobile-nav .logo img {
-    height: 50px;
-    width: auto;
+    max-height: 50px;
+    width: 80%;
     position: fixed;
     left: 5%;
   }
