--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -67,6 +67,9 @@ footer {
 label[for="search-input"] {
   display: none;
 }
+label[for="checkbox"] {
+  display: none;
+}
 .search-input::placeholder {
   color: #999;
   opacity: 0.7;
