--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,7 +12,9 @@ body {
   --shadow: rgba(0, 0, 0, 0.7);
   --menu-speed: 0.75s;
 }
-
+img {
+  width: 100%;
+}
 /*Text colours */
 h1 {
   margin-top: 2%;
@@ -23,9 +25,10 @@ h1 {
   text-transform: uppercase;
   text-align: center;
 }
-h1 a {
+a {
   text-decoration: none;
   color: var(--accent-col);
+  padding: 10px;
 }
 
 /*cover museum shaping */
@@ -38,7 +41,6 @@ h1 a {
 }
 
 .cropped-image {
-  width: 100%;
   max-height: 400px;
   object-fit: cover;
 }
@@ -63,11 +65,10 @@ h1 a {
   display: flex;
   align-items: center;
   max-height: 300px;
-  width: 100%;
+
   overflow: hidden;
 }
 .event-cropped-img {
-  width: 100%;
   height: 300px;
   object-fit: cover;
   object-position: 30% 50%;
@@ -107,7 +108,9 @@ h1 a {
 .form-box {
   border: 3px solid var(--black);
 }
+
 .form-container {
+  composes: grid-container;
   height: 100%;
   width: 100%;
   display: grid;
@@ -154,25 +157,20 @@ h1 a {
   border-radius: 20px;
 }
 
-input[type="radio"] {
-  display: none;
-}
-
 .checkout-button:hover,
 .ticket-option:hover,
+.grid-container a:hover,
 input[type="radio"]:checked + .ticket-option {
   background-color: var(--shadow);
 }
 
+input[type="radio"],
+label[for="quantity"],
+legend,
 .step label {
   display: none;
 }
-label[for="quantity"] {
-  display: none;
-}
-legend {
-  display: none;
-}
+
 fieldset {
   border: none;
 }
@@ -190,54 +188,38 @@ fieldset {
   justify-content: space-between;
   margin-bottom: 20px;
 }
-.img {
-  width: 100%;
-  position: relative;
-}
+/*check this where the class is */
 
 .grid-container a {
-  color: var(--accent-col);
   background-color: var(--main-col);
-  padding: 10px;
-  text-decoration: none;
-  display: block;
+}
 
-  font-weight: 500;
-}
-.grid-container a:hover {
-  background-color: var(--shadow);
-}
+/*grid arear tags*/
 .img1 {
   grid-area: img1;
 }
-
 .link1 {
   grid-area: link1;
 }
-
 .img2 {
   grid-area: img2;
 }
-
 .link2 {
   grid-area: link2;
 }
-
 .img3 {
   grid-area: img3;
 }
-
 .link3 {
   grid-area: link3;
 }
-
 .img4 {
   grid-area: img4;
 }
-
 .link4 {
   grid-area: link4;
 }
+
 /*Young stars club */
 .club {
   display: flex;
@@ -257,7 +239,7 @@ fieldset {
 }
 
 .club-box img {
-  max-width: 100%;
+  max-width: 100%; /*/check this width if it cahgnes anything*/
   height: auto;
 }
 
@@ -279,8 +261,6 @@ fieldset {
   width: 100%;
 }
 .exhibition-img img {
-  width: 100%;
-  max-height: 100%;
   object-fit: cover;
 }
 .enterexhibition {
@@ -291,11 +271,9 @@ fieldset {
 /*map and location*/
 .map-img {
   display: flex;
-
   width: 100%;
 }
 .map-img img {
-  width: 100%;
   max-height: 100%;
   object-fit: cover;
 }
