--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,6 +15,17 @@ body {
 img {
   width: 100%;
 }
+
+a {
+  text-decoration: none;
+  color: var(--accent-col);
+  padding: 10px;
+}
+/*page containers*/
+.page-container {
+  margin: 3%;
+}
+
 /*Text colours */
 h1 {
   margin-top: 2%;
@@ -25,11 +36,7 @@ h1 {
 .h-styling {
   text-transform: uppercase;
 }
-a {
-  text-decoration: none;
-  color: var(--accent-col);
-  padding: 10px;
-}
+
 /* Nav and header styling*/
 nav {
   display: flex;
@@ -108,6 +115,141 @@ label[for="checkbox"] {
   opacity: 0.7;
 }
 
+/*Hamburger menu - see reference in report*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.menu-wrap {
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 1;
+}
+
+.menu-wrap .toggler {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+  opacity: 0;
+}
+
+.menu-wrap .hamburger {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 1;
+  width: 60px;
+  height: 60px;
+  padding: 1rem;
+  background: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.menu-wrap .hamburger > div {
+  position: relative;
+  flex: none;
+  width: 100%;
+  height: 2px;
+  background: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.4s ease;
+}
+
+.menu-wrap .hamburger > div::before,
+.menu-wrap .hamburger > div::after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  top: -10px;
+  width: 100%;
+  height: 2px;
+  background: inherit;
+}
+
+.menu-wrap .hamburger > div::after {
+  top: 10px;
+}
+
+.menu-wrap .toggler:checked + .hamburger > div {
+  transform: rotate(135deg);
+}
+
+.menu-wrap .toggler:checked + .hamburger > div:before,
+.menu-wrap .toggler:checked + .hamburger > div:after {
+  top: 0;
+  transform: rotate(90deg);
+}
+
+.menu-wrap .toggler:checked:hover + .hamburger > div {
+  transform: rotate(225deg);
+}
+
+.menu-wrap .toggler:checked ~ .menu {
+  visibility: visible;
+}
+
+.menu-wrap .toggler:checked ~ .menu > div {
+  transform: scale(1);
+  transition-duration: var(--menu-speed);
+}
+
+.menu-wrap .toggler:checked ~ .menu > div > div {
+  opacity: 1;
+  transition: opacity 0.4s ease 0.4s;
+}
+
+.menu-wrap .menu {
+  width: 100%;
+  height: 100%;
+  visibility: hidden;
+  overflow: hidden;
+  display: flex;
+}
+
+.menu-wrap .menu > div {
+  background: var(--main-col);
+  width: 40vw;
+  height: 100vw;
+  display: flex;
+  flex: none;
+  align-items: center;
+  justify-content: center;
+  transform: scale(0);
+  transition: all 0.4s ease;
+}
+
+.menu-wrap .menu > div > div {
+  text-align: center;
+  max-width: 50vw;
+  max-height: 50vh;
+
+  transition: opacity 0.4s ease;
+}
+
+.menu-wrap .menu > div > div > ul > li {
+  list-style: none;
+  color: #fff;
+  font-size: 1.5rem;
+  padding: 0.7rem;
+}
+
+.menu-wrap .menu > div > div > ul > li > a {
+  color: inherit;
+  text-decoration: none;
+  transition: color 0.4s ease;
+}
+
 /*header media query*/
 .desktop-nav {
   display: block;
@@ -116,7 +258,7 @@ label[for="checkbox"] {
   display: none;
 }
 
-/*cover museum shaping */
+/*cover and image shaping */
 .cover {
   display: flex;
   flex-direction: column;
@@ -130,7 +272,7 @@ label[for="checkbox"] {
   object-fit: cover;
 }
 
-/* Main Exhibition codes and work in progress */
+/* Main Exhibition */
 .mainevent {
   display: flex;
   background-color: var(--main-col);
@@ -155,11 +297,8 @@ label[for="checkbox"] {
   object-fit: cover;
   object-position: 30% 50%;
 }
-/*page containers*/
-.page-container {
-  margin: 3%;
-}
-/*Border for information text*/
+
+/*Boxes and Informational text*/
 
 .info-box {
   border: 3px solid black;
@@ -184,6 +323,7 @@ label[for="checkbox"] {
   align-items: flex-start;
   margin-right: 5%;
 }
+
 /*form*/
 .form-box {
   border: 3px solid var(--black);
@@ -207,35 +347,31 @@ label[for="checkbox"] {
 .link5 {
   grid-column: 2 / span 2;
 }
+.button {
+  font-size: 1.5em;
+  margin-top: 0;
+  margin: 50px;
+  width: 200px;
+  max-height: 100px;
+  box-shadow: -3px 5px 10px rgba(39, 47, 58, 0.7);
+}
 
 .ticket-option {
   cursor: pointer;
-  color: var(--accent-col);
-  text-align: center;
-  text-decoration: none;
-  padding: 10px 20px;
   font-size: 0.7em;
-  border-radius: 20px;
-  font-weight: bold;
-  background-color: var(--main-col);
-  width: auto;
 }
 
-.checkout-button {
-  cursor: pointer;
-  color: var(--accent-col);
+.button-base {
   text-align: center;
+  color: var(--accent-col);
   text-decoration: none;
   padding: 10px 20px;
-  font-size: 0.5em;
+  border-radius: 20px;
   font-weight: bold;
   background-color: var(--main-col);
-  margin-top: 10px;
-  width: auto;
-  border-radius: 20px;
 }
 
-.checkout-button:hover,
+.button:hover,
 .ticket-option:hover,
 .grid-container a:hover,
 input[type="radio"]:checked + .ticket-option {
@@ -317,7 +453,7 @@ fieldset {
 }
 
 .club-box img {
-  max-width: 100%; /*/check this width if it cahgnes anything*/
+  max-width: 100%; /*check*/
   height: auto;
 }
 
