--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -104,7 +104,8 @@ footer {
 
   color: #333;
 }
-label[for="search-input"] {
+label[for="search-input"],
+label[for="search-hamburger"] {
   display: none;
 }
 label[for="checkbox"] {
@@ -220,7 +221,7 @@ label[for="checkbox"] {
 .menu-wrap .menu > div {
   background: var(--main-col);
   width: 40vw;
-  height: 100vw;
+  height: 120vw;
   display: flex;
   flex: none;
   align-items: center;
@@ -232,7 +233,7 @@ label[for="checkbox"] {
 .menu-wrap .menu > div > div {
   text-align: center;
   max-width: 50vw;
-  max-height: 50vh;
+  max-height: 100vh;
 
   transition: opacity 0.4s ease;
 }
