--- a/assets/css/tablet.css
+++ b/assets/css/tablet.css
@@ -1,109 +1,18 @@
 @media (min-width: 701px) and (max-width: 1023px) {
   /*cover museum shaping */
+
   .cover {
     max-height: 150px;
   }
 
-  /* Main Exhibition codes and work in progress */
-
-  .entermain {
-    flex: 1;
-    padding: 10px 50px;
-  }
-
-  .event-img {
-    flex: 2;
-    display: flex;
-    align-items: center;
-    max-height: 300px;
-    width: 100%;
-    overflow: hidden;
-  }
-  .event-cropped-img {
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-    object-position: 30% 50%;
-  }
+  /* Main Exhibition */
 
   /*Border for information text*/
 
-  /* Collection links with images */
-  .grid-container {
-    grid-template-areas:
-      "img1 img2"
-      "link1 link2"
-      "img3 img4"
-      "link3 link4";
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, auto);
-  }
-  .img {
-    width: 100%;
-    position: relative;
-  }
-
-  .grid-container a {
-    color: var(--accent-col);
-    background-color: var(--main-col);
-    padding: 10px;
-    text-decoration: none;
-    display: block;
-    font-size: 2em;
-    font-weight: 500;
-  }
-
-  /*Young stars club */
-  .club {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-  }
-
-  .club-box {
-    flex: 1;
-    min-width: 45%;
-    max-width: 45%;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-  }
-
-  .club-box img {
-    max-width: 100%;
-    height: auto;
-  }
-
-  .club-enter {
-    flex: 1;
-    background-color: var(--main-col);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  /*Exhibition listed on exhibit page*/
-
-  .exhibition-img {
-    display: flex;
-    max-height: 300px;
-    overflow: hidden;
-    width: 100%;
-  }
-  .exhibition-img img {
-    width: 100%;
-    max-height: 100%;
-    object-fit: cover;
-  }
-  .enterexhibition {
-    width: 100%;
-    background-color: var(--exhibition-col);
-    text-align: center;
-  }
   /*form*/
-
+  .form-box {
+    margin-top: 70px;
+  }
   .form-container {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(5, auto);
@@ -115,4 +24,18 @@
   .link5 {
     grid-column: 1 / span 2;
   }
+  /* Collection links with images */
+  .grid-container {
+    grid-template-areas:
+      "img1 img2"
+      "link1 link2"
+      "img3 img4"
+      "link3 link4";
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, auto);
+  }
+
+  /*Young stars club */
+
+  /*Exhibition listed on exhibit page*/
 }
