--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -85,13 +85,14 @@ nav {
 li {
   display: inline-block;
 }
+
 footer {
-  display: flex;
+  align-items: center;
   justify-content: center;
-  flex-direction: column;
 }
 .flex-one {
   flex: 1;
+  justify-content: center;
 }
 
 .search-input {
